syntax = "proto3";
option go_package = "./pb";
package service;

service InternalAPI {
  rpc SignedGsUrls (SignedGsUrlsRequest) returns (SignedGsUrlsResponse);
  rpc SendPush (SendPushRequest) returns (SendPushResponse);
}

message SignedGsUrlsRequest {
  repeated string gs_urls = 1;
}

message SignedGsUrlsResponse {
  repeated string urls = 1;
}

message SendPushRequest {
  string text = 1;
}

message SendPushResponse {

}